--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,8 @@
     <string name="iso_8601_format">yyyy-MM-dd\'T\'HH:mm:ss.SSS\'Z\'</string>
     <string name="infrontx_date_item_adapter_format">MMM dd, yyyy \'at\' HH:mm</string>
     <string name="weekday_format">EEE</string>
-    <string name="year_month_format">MMMM YY</string>
+    <string name="input_year_month_format">yyyy-MM</string>
+    <string name="output_year_month_format">MMMM yyyy</string>
 
     <string name="postponed">postponed</string>
 </resources>
